--- a/Autoschool-new/src/main/resources/org/main/autoschoolnew/main-view.fxml
+++ b/Autoschool-new/src/main/resources/org/main/autoschoolnew/main-view.fxml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<TitledPane fx:id="TitledPaneHeader" animated="false" maxHeight="-Infinity"
-            maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" text="Main" xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/21"
-            fx:controller="org.main.autoschoolnew.controllers.MainWindowController">
-    <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-    </content>
-</TitledPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<AnchorPane prefHeight="491.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.main.autoschoolnew.controllers.MainWindowController">
+    <children>
+        <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <top>
+                <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
+                    <items>
+                        <Label fx:id="LabelUser" text="Добро пожаловать, Инструктор!" />
+                        <Button fx:id="BtnBack" onAction="#BtnBackAction" text="Назад" />
+                    </items>
+                </ToolBar>
+            </top>
+            <center>
+                <VBox alignment="CENTER" spacing="1.0">
+                    <HBox alignment="CENTER" spacing="15.0">
+                        <ComboBox fx:id="CmboBoxInstructor" onAction="#CmboBoxInstructorAction" promptText="Выберите инструктора" />
+                        <ComboBox fx:id="ComboboxSort" onAction="#ComboboxSortAction" promptText="Сортировать по" />
+                    </HBox>
+                    <ListView  fx:id="ListViewStudents" prefHeight="414.0" prefWidth="799.0" />
+                </VBox>
+            </center>
+            <bottom>
+                <Label fx:id="LabelInfo" text="Статус: Готово" BorderPane.alignment="CENTER_LEFT" />
+            </bottom>
+        </BorderPane>
+    </children>
+</AnchorPane>
